Upgrade to Gradle 8.4
Also upgrade asciidoctor-gradle-plugin to 4.0.0-alpha-1 and AsciiDoctor to 2.5.10